Move towards adding some testing